--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ROM_URL=https://goindex.aryankaran.workers.dev/1:down/COS7/CPH1955EX_11_OTA_2090_all_nexSIO0Kl1dd.zip
 ZIP_NAME=update.zip
-OS_TYPE=ColorOS
+OS_TYPE=Generic
 BUILD_TYPE=AB
 REPACK_NAME=COS-10.zip
 VERSION=12.1
